# Diffusion-LLM-Quantization-Robustness

./: .gitignore  .gitmodules  README.md  old_pyproject.toml  pixi.toml  pyproject.toml
CoDA/: test_coda_mamba_model.py  test_coda_model.py
CoDA/CoDALanguageModel/: README.md  bimamba.py  model_config.py  modeling_coda.py  special_tokens_map.json
CoDA/evaluation/: HELP.md  create_gptq_models.py  eval_mbpp_humaneval.sh  run_benchmark_evals.py  run_evals.py  run_latency_evals.py  run_qwen3_benchmark_evals.py  test_latency.py  tmj.sbatch  utils.py
CoDA/evaluation/gptq_experiments/: create_gptq_models.py  create_qwen3_gptq_models.py  create_qwen3_models.py  load.sbatch  load_coda_og_model.py  load_og_models.py  load_qwen3_model.py  load_qwen_model.py  quant.sbatch  test.sbatch
CoDA/evaluation/lm_eval/: README.md
CoDA/evaluation/lm_eval/lm_eval/models/: diffllm.py
CoDA/evaluation/lm_eval/models/: __init__.py  diffllm.py
CoDA/evaluation/lm_eval/tasks/humaneval/: humaneval.yaml  humaneval_plus.yaml  utils.py
CoDA/evaluation/lm_eval/tasks/mbpp/: mbpp_instruct.yaml
CoDA/evaluation/slurm_scripts/: Task_humaneval_instruct_evaluation_on___storage__ice1__0__7__agupta965__research2__coda-3poch-gsm.sh
CoDA/evaluation/utils/: eval_utils.py  latency_utils.py  qwen_eval_utils.py  qwen_latency_utils.py
evaluation/: eval_llada.py  llada_generation.py  run_evals.py
hawq/: main.py  main_on_pace.py  sft_submit.sbatch
hawq/guru/: main.py  quant.py  utils.py
hawq/sft/: dllm_sft.py  hawq_sft.py  nohup.out  out.txt  pixi.toml  plottah.py  qat_sft.py  test_model.py  thing.ipynb
hawq/sft/CoDALanguageModel/: modeling_coda.py  modeling_utils.py
hawq/sft/checkpoints/: final_sensitivity_analysis_report.txt
hawq/sft/translated/: trainer.py
src/evaluation/: run_benchmark_evals.py  run_demo.py  run_latency_evals.py  run_qwen3_benchmark_evals.py  run_qwen3_latency_evals.py  test_latency.py  test_qwen3_latency.py
src/evaluation/lm_eval/: .gitignore
src/evaluation/lm_eval/models/: diffllm.py
src/evaluation/lm_eval/tasks/humaneval/: humaneval_5_instruct.yaml  humaneval_5_instruct_noprefix.yaml  (+2 more)
src/evaluation/slurm_scripts/: Task_humaneval_instruct_evaluation_on___storage__i.sh
src/evaluation/utils/: eval_utils.py  latency_utils.py  qwen_eval_utils.py  qwen_latency_utils.py
src/quant_tooling/gptq/: create_coda_gptq_models.py  create_qwen3_gptq_models.py  load_base_models.py  load_models.sbatch
src/quant_tooling/hawq/quantlib/: coda_sensitivities_from_aarav.json  main.py  quant.py  utils.py
src/quant_tooling/hawq/sft/: qat_sft.py  sens_gen.py
utils/: device.py  set_env_var.py
(+23 files in other folders)
