[project]
name = "research2"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.34.2",
    "antlr4-python3-runtime==4.11",
    "cython>=3.1.4",
    "device-smi>=0.5.1",
    "gptqmodel>=4.2.5",
    "hf-xet>=1.1.10",
    "huggingface-hub>=0.35.3",
    "lightning>=2.5.5",
    "lm-eval==0.4.8",
    "logbar>=0.1.4",
    "math-verify>=0.8.0",
    "optimum>=2.0.0",
    "pillow>=12.0.0",
    "pyslurm",
    "safetensors>=0.6.2",
    "sympy>=1.14.0",
    "tokenicer>=0.0.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers[torch]==4.49.0",
    "vptq",
]

[dependency-groups]
dev = ["poethepoet>=0.37.0"]

[tool.poe.tasks]
test_llada = "python -m evaluation.llada_generation"

[tool.uv.sources]
pyslurm = { git = "https://github.com/PySlurm/pyslurm.git", rev = "24.11.x" }
vptq = { git = "https://github.com/microsoft/VPTQ.git" }
